src/style.css
:root{
    --primary-color: #b20000;
    --secondary-color: #1e1e1e;
    --text-color: #ffffff;
}

* {
    box-sizing: border-box;
}

body {
    color: var(--text-color);
    margin: 0;
    padding: 0;
    background-color: #121212;
    font-family: 'Roboto Mono', monospace;
}

.navbar {
    background-color: #333;
    padding: 10px 20px;
    display: flex;
    justify-content: flex-end; /* Aligns the icon to the right */
    align-items: center;
}

.github-icon {
    color: white;
    font-size: 24px;
    text-decoration: none;
    margin-right: 20px;
    transition: color 0.3s ease;
}

.github-icon:hover {
    color: #bbb;
}

#task-container {
    max-width: 700px;
    margin: 20px auto;
    padding: 20px;
    border: 2px solid #a10000;
    border-radius: 10px;
    background-color: #1e1e1e;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.task-items {
    margin-bottom: 20px;
}

#hint-container {
    display: flex;
    align-items: center;
    color: #a10000;
}

#hint-container label {
    margin-right: 10px;
}

#hint {
    display: none;
}

#hint-box:checked ~ #hint {
    display: block;
}

textarea {
    width: calc(50% - 15px);
    padding: 10px;
    margin-bottom: 20px;
    border-radius: 5px;
    border: 2px solid #a10000;
    background-color: #1e1e1e;
    color: #ffffff;
    resize: none;
    font-family: 'Roboto Mono', monospace;
    font-size: 14px;
    line-height: 1.5;
    min-height: 200px;
}

textarea:first-child {
    margin-right: 30px;
}

textarea:focus {
    outline: none;
    border-color: #800000;
}

.input-container {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 20px;
}

.input-container label {
    margin-right: 10px;
    font-weight: bold;
}

.input-container input[type="text"] {
    padding: 10px;
    border-radius: 5px;
    border: 2px solid #a10000;
    background-color: #1e1e1e;
    color: #ffffff;
    font-family: 'Roboto Mono', monospace;
    font-size: 14px;
    width: 200px;
    margin-right: 10px;
}

.input-container button {
    padding: 10px 20px;
    background-color: #a10000;
    color: #ffffff;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-family: 'Roboto', sans-serif;
    transition: background-color 0.3s ease;
}

.input-container button:hover {
    background-color: #800000;
}

h2 {
    font-size: 24px;
    margin-bottom: 20px;
    text-align: center;
}

@keyframes text-color {
    0% { color: #ffffff; }
    50% { color: #a10000; }
    100% { color: #ffffff; }
}

label {
    margin-right: 10px;
    font-weight: bold;
}

.footer {
    background-color: #333;
    color: white;
    padding: 20px;
    text-align: center; /* Center align the content */
}

.footer-content {
    display: flex;
    justify-content: center;
    align-items: center;
}

.footer-content p {
    margin: 0;
}

@media screen and (max-width: 600px) {
    #task-container {
        padding: 10px;
        margin: 10px;
    }

    textarea {
       width: 100%;
    }

    .input-container {
        flex-direction: column;
        align-items: flex-start;
    }

    .input-container label {
        margin-bottom: 10px;
        margin-left: 100px;
    }

    .input-container input[type="text"] {
        margin: 10px;
        width: calc(100% - 20px)

    }

    .input-container button {
        margin: 10px;
        width: calc(100% - 20px);
    }

    button {
        font-size: 16px;
    }
}

